Add top part of container

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-
+        <div align="center">
+            <div id="container">
+                <div id="top_container_part">
+                    <a href="index.html"><img class="logo" src="images/logo.png" alt="logo programowanie" /></a>
+                <!-- end of the top_container_part div -->
+                </div>
+            <!-- end of the container div -->
+            </div>
+        </div>
     </body>
 </html>
