Add contact box

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             <div id="container">
                 <div id="top_container_part">
                     <a href="index.html"><img class="logo" src="images/logo.png" alt="logo programowanie" /></a>
+                    <div id="contact_box">
+                        <table>
+                            <tr><th>Kontakt:</th></tr>
+                            <tr><td>Programowanie Sp. z o.o.</td></tr>
+                            <tr><td>01-234 Sim City</td></tr>
+                            <tr><td>ul. Topolowa 56</td></tr>
+                            <tr><td>tel. 789 012 345</td></tr>
+                            <tr><td>email: <a href="mailto:jankowalski@asdfgh.pl">jankowalski@asdfgh.pl</a></td></tr>
+                        </table>
+                    </div>
                 <!-- end of the top_container_part div -->
                 </div>
             <!-- end of the container div -->
