--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
             <div id="container">
                 <div id="top_container_part">
                     <a href="index.html"><img class="logo" src="images/logo.png" alt="logo programowanie" /></a>
+                    <div id="top_menu">
+                        <ul id="major_top_menu">
+                            <li><a href=""><span class="link">Projekty</span></a></li>
+                            <li><a href=""><span class="link">Kursy</span></a></li>
+                            <li><a href=""><span class="link">Kariera</span></a></li>
+                            <li><a href=""><span class="link">Forum</span></a></li>
+                            <li><a href=""><span class="link">Blog</span></a></li>
+                            <li><a href=""><span class="link">Sklep</span></a></li>
+                        </ul>
+                    </div>
                     <div id="contact_box">
                         <table>
                             <tr><th>Kontakt:</th></tr>
