--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
                     </div>
                 <!-- end of the top_container_part div -->
                 </div>
+                <div id="inner_menu">
+                    <ul id="inner_menu_level1">
+                        <li><a href="#"><span class="link2">Projekty C++</span></a></li>
+                        <li><a href="#"><span class="link2">Projekty Webowe</span></a></li>
+                        <li><a href="#"><span class="link2">Projekty Python</span></a></li>
+                        <li><a href="#"><span class="link2">Projekty Machine Learning</span></a></li>
+                    </ul>
+                </div>
+                <!-- end of the inner_menu div -->
             <!-- end of the container div -->
             </div>
         </div>
