--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
                     <a href="index.html"><img class="logo" src="images/logo.png" alt="logo programowanie" /></a>
                     <div id="top_menu">
                         <ul id="major_top_menu">
-                            <li><a href=""><span class="link">Projekty</span></a></li>
-                            <li><a href=""><span class="link">Kursy</span></a></li>
+                            <li><a href=""><span class="link">Strona główna</span></a></li>
                             <li><a href=""><span class="link">Kariera</span></a></li>
                             <li><a href=""><span class="link">Forum</span></a></li>
                             <li><a href=""><span class="link">Blog</span></a></li>
@@ -41,10 +40,9 @@
                 </div>
                 <div id="inner_menu">
                     <ul id="inner_menu_level1">
-                        <li><a href="#"><span class="link2">Projekty C++</span></a></li>
-                        <li><a href="#"><span class="link2">Projekty Webowe</span></a></li>
-                        <li><a href="#"><span class="link2">Projekty Python</span></a></li>
-                        <li><a href="#"><span class="link2">Projekty Machine Learning</span></a></li>
+                        <li><a href="#"><span class="link2">O programowaniu</span></a></li>
+                        <li><a href="#"><span class="link2">Projekty</span></a></li>
+                        <li><a href="#"><span class="link2">Kursy</span></a></li>
                     </ul>
                 </div>
                 <!-- end of the inner_menu div -->
