--- a/index.html
+++ b/index.html
@@ -41,8 +41,25 @@
                 <div id="inner_menu">
                     <ul id="inner_menu_level1">
                         <li><a href="#"><span class="link2">O programowaniu</span></a></li>
-                        <li><a href="#"><span class="link2">Projekty</span></a></li>
-                        <li><a href="#"><span class="link2">Kursy</span></a></li>
+                        <li><a href="#"><span class="link2">Projekty</span></a>
+
+                            <ul class="inner_menu_level2">
+                                <li class="first_element_menu"><a href="#">C++</a></li>
+                                <li><a href="#">Python</a></li>
+                                <li><a href="#">Strony internetowe</a></li>
+                                <li><a href="#">Machine learning</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#"><span class="link2">Kursy</span></a>
+                            <ul class="inner_menu_level2" style="width: 150px">
+                                <li class="first_element_menu" style="width: 110px;"><a href="#" style="width: 110px;">C++</a></li>
+                                <li style="width: 110px;"><a href="#" style="width: 110px;">Python</a></li>
+                                <li style="width: 110px;"><a href="#" style="width: 110px;">HTML</a></li>
+                                <li style="width: 110px;"><a href="#" style="width: 110px;">CSS</a></li>
+                                <li style="width: 110px;"><a href="#" style="width: 110px;">Javascript</a></li>
+                                <li style="width: 110px;"><a href="#" style="width: 110px;">Machine learning</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <!-- end of the inner_menu div -->
