Add middle part of content

--- a/index.html
+++ b/index.html
@@ -61,8 +61,68 @@
                             </ul>
                         </li>
                     </ul>
-                </div>
                 <!-- end of the inner_menu div -->
+                </div>
+                <div id="content">
+                    <div id="top_content_part">
+
+                        <!-- end of top_content_part div -->
+                    </div>
+                    <div id="middle_content_part">
+                        <div class="side_text">
+                            <h2>Programiści</h2>
+
+                            <p>Osoba programująca komputery nazywa się programistą. Ich praca zazwyczaj obejmuje:</p>
+                            <ul>
+                                <li>analizę wymagań systemowych</li>
+                                <li>specyfikację aplikacji</li>
+                                <li>architekturę systemu informatycznego</li>
+                                <li>programowanie</li>
+                                <li>kompilację oprogramowania</li>
+                                <li>testowanie oprogramowania</li>
+                                <li>dokumentację programu</li>
+                                <li>integrację systemów</li>
+                                <li>konserwację oprogramowania.</li>
+                            </ul>
+                        </div>
+                        <div id="text">
+                            <h1>Programowanie komputerów</h1>
+
+                            <p><strong>Programowanie komputerów</strong> – proces tworzenia <strong>programu komputerowego</strong>. <strong>Kod źródłowy</strong> jest napisany w <strong>języku programowania</strong>.</p>
+
+                            <p>Między programistami trwają debaty, czy programowanie komputerów jest sztuką, rzemiosłem czy procesem inżynieryjnym. Bezpośrednią formą sztuki w tej dziedzinie jest <strong>demoscena</strong> oraz nowoczesne <strong>gry komputerowe</strong>.</p>
+
+                            <p>
+                                Inną debatą dotyczącą tego przedmiotu jest stopień, w jakim język programowania wpływa na formę, jaką przybiera oraz jak funkcjonuje końcowy program. Jest ona analogiczna do hipotezy Sapira-Whorfa w lingwistyce.
+                                W zależności od tworzonego programu, wymagana jest wiedza z różnych dziedzin informatyki. Podstawowe z nich to <strong>algorytmy</strong> i <strong>struktury danych</strong>, instrukcje sterujące oraz <strong>architektura komputerów</strong>. Z perspektywy <strong>
+                                    inżynierii
+                                    oprogramowania
+                                </strong> programowanie (implementacja) jest tylko jednym z etapów powstawania programu.
+                            </p>
+
+                            <h2>Języki programowania</h2>
+                            <p>
+                                Różne <strong>języki programowania</strong> pozwalają na wykorzystanie różnych stylów programowania zwanych również paradygmatami programowania oraz specyficznych cech danego języka.
+                                Wybór konkretnego języka może zależeć od indywidualnych upodobań, polityki firmy tworzącej oprogramowanie lub ze względu na zadanie, jakie końcowa aplikacja ma realizować.
+                            </p>
+                            <p>
+                                Najlepszym rozwiązaniem jest wybór języka programowania najbardziej dostosowanego do rozwiązywanego zadania i ewentualnej istniejącej infrastruktury. Najważniejsze kryteria
+                                wyboru języka programowania to: paradygmat i rodzaj języka, przenośność i wydajność kompilatorów, dojrzałość oraz dostępność narzędzi i dokumentacji.
+                            </p>
+                            <p>
+                                Ze względów takich jak brak kompilatorów dla danej platformy sprzętowej, niewystarczająca wydajność wynikowego kody aplikacji, czy konieczność utrzymania i integracji z już
+                                istniejącą infrastrukturą, może nie być to możliwe lub zbyt kosztowne do zrealizowania. W przypadku większych projektów istotne jest też, jak szybko można znaleźć
+                                odpowiednio wykwalifikowane osoby znające konkretny język i jak szybko uda się z nich stworzyć sprawny zespół.
+                            </p>
+                        </div>
+                        <!-- end of middle_content_part div -->
+                    </div>
+                    <div id="bottom_content_part">
+
+                        <!-- end of bottom_content_part div -->
+                    </div>
+                    <!-- end of content div -->
+                </div>
             <!-- end of the container div -->
             </div>
         </div>
