--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div id="content">
                     <div id="top_content_part">
 
-                        <!-- end of top_content_part div -->
+                    <!-- end of top_content_part div -->
                     </div>
                     <div id="middle_content_part">
                         <div class="side_text">
@@ -115,14 +115,24 @@
                                 odpowiednio wykwalifikowane osoby znające konkretny język i jak szybko uda się z nich stworzyć sprawny zespół.
                             </p>
                         </div>
-                        <!-- end of middle_content_part div -->
+                    <!-- end of middle_content_part div -->
                     </div>
                     <div id="bottom_content_part">
 
-                        <!-- end of bottom_content_part div -->
+                    <!-- end of bottom_content_part div -->
                     </div>
-                    <!-- end of content div -->
+                 <!-- end of content div -->
                 </div>
+                <div id="footer">
+                    <p>
+                        <a href="http://validator.w3.org/check?uri=referer">
+                            <img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" />
+                        </a>
+                    </p>
+                    <p>
+                        Prawa autorskie © 2020 Programowanie Sp. z o.o.
+                    </p>
+                    </div>
             <!-- end of the container div -->
             </div>
         </div>
