--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <a href="index.html"><img class="logo" src="images/logo.png" alt="logo programowanie" /></a>
                     <div id="top_menu">
                         <ul id="major_top_menu">
-                            <li><a href=""><span class="link">Strona główna</span></a></li>
-                            <li><a href=""><span class="link">Kariera</span></a></li>
+                            <li><a href="index.html"><span class="link">Strona główna</span></a></li>
+                            <li><a href="career.html"><span class="link">Kariera</span></a></li>
                             <li><a href=""><span class="link">Forum</span></a></li>
                             <li><a href=""><span class="link">Blog</span></a></li>
                             <li><a href=""><span class="link">Sklep</span></a></li>
